--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -24,7 +24,8 @@ ul {
 }
 .header {
     background-color:#FFF;
-    width: auto;
+    width: 100%;
+    height: 80px;
 }
 
     h1,
@@ -33,14 +34,26 @@ ul {
      font-family: Roboto, sans-serif;
     }
 
+.header-content{
+    height: 80px;
+
+    display: flex;
+    align-content: space-around;
+    justify-content: space-between;
+}
+
 /* Студія */
 .logo {
+    display: flex;
+    align-items: start;
+
     color: #000000;
 
     font-family: Raleway, sans-serif;   
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
+    padding-right: 93px;
 
     text-decoration: none;
 }
@@ -49,9 +62,16 @@ ul {
 }
 
 /* site nav */
+.nav {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    justify-content: space-around;
+}
 .site-nav a {
     color:var(--title-text-color);
 
+    padding-right: 50px;
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
@@ -65,6 +85,7 @@ ul {
     line-height: normal;
     letter-spacing: 0.28px;
     text-decoration: none;
+    padding-left: 40px;
 }
 .site-nav a:hover,
 .site-nav a:focus {
@@ -76,6 +97,19 @@ ul {
 }
 .site-nav .link.current{
     color: var(--accent-text-color);
+}
+
+.site-nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 0px;
+}
+
+.site-contacts{
+    display:flex;
+    align-items: center;
+    justify-items: space-between;
 }
 
 /* Герой */
@@ -112,6 +146,7 @@ ul {
     letter-spacing: 0.06em;
     height: 50px;
     width: 200px;
+    border: none;
     border-radius: 4px;
     
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -148,6 +183,7 @@ ul {
     align-items: baseline;
     gap: 30px;
     padding-top: 94px;
+    margin: 0px;
 }
 
 .Features .title {
@@ -194,8 +230,19 @@ ul {
 }
     /*Футер */
 .footer{
+    width: 100%;
     height: 251px;
     background: #2F303A;
+}
+.footer .logo {
+    padding-top: 60px;
+}
+.footer-content{
+    display: flex;
+    flex-direction: column;
+    align-content: space-around;
+    justify-content: space-between;
+    padding-left: 40px;
 }
  .footer,
   .footer .logo {color: #ffffff ;
@@ -206,7 +253,17 @@ ul {
     font-size: 14px;
     font-style: normal;
  }
-
+.address-text {
+    margin-top: 28px;
+    margin-bottom: 0px;
+}
+.address-links li {
+    margin-top: 12px;
+}
+.address-links {
+    margin: 0px;
+    padding: 0px;
+}
  .address-links a {
 
    color: rgba(255, 255, 255, 0.6);
@@ -216,7 +273,7 @@ ul {
     font-style: normal;
     line-height: 1.71;    
     text-decoration: none;
-
+    margin-top: 12px;
  }
  .address-links a:hover,
  .address-links a:focus {
@@ -238,10 +295,10 @@ color: var(--primary-text-color)}
     color: var(--title-text-color);
     background-color: var(--special-background-color);
 
-    flex-basis: calc((100% - 4 * 30) / 5);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.63;
+    padding: 6px 22px 6px 22px;
+    height: auto;
+    width: auto;
+    border: none;
     margin: 4px;
     cursor: pointer;
 }
@@ -261,7 +318,6 @@ color: var(--primary-text-color)}
 .portfolio {
     display: flex;
     flex-wrap: wrap;
-    width: 1600px;
     gap: 30px;
     justify-content: center;
 
@@ -287,4 +343,9 @@ color: var(--primary-text-color)}
     font-size: 18px;
     line-height: 2.25;
     letter-spacing: 0.068em;
+}
+hr {
+    border: none;
+    height: 1px;
+    background-color: #ECECECEC;
 }
