--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -332,7 +332,7 @@ color: var(--primary-text-color)}
     background: #ffffff;
 
     flex-basis: calc((100% - 2 * 30) / 3);
-    height: 404px;
+    height: auto;
     flex-shrink: 0;
     flex-grow: 0;
 }
@@ -343,6 +343,13 @@ color: var(--primary-text-color)}
     font-size: 18px;
     line-height: 2.25;
     letter-spacing: 0.068em;
+    padding-left: 24px;
+    margin: 0px;
+}
+.card p {
+    padding-left: 24px;
+    padding-bottom: 20px;
+    margin: 0px;
 }
 hr {
     border: none;
