--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,13 +19,13 @@ ul {
     letter-spacing: 0.03em;
 }
 .container{
-    max-width: 1200px;
-    margin: auto;
+    width: 1200px;
+    margin: 0 auto;
+    padding: 0px 15px;
 }
 .header {
     background-color:#FFF;
-    width: 100%;
-    height: 80px;
+    border-bottom: 1px solid #ececec;
 }
 
     h1,
@@ -35,10 +35,7 @@ ul {
     }
 
 .header-content{
-    height: 80px;
-
     display: flex;
-    align-content: space-around;
     justify-content: space-between;
 }
 
@@ -53,7 +50,7 @@ ul {
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
-    padding-right: 93px;
+    margin-right: 93px;
 
     text-decoration: none;
 }
@@ -71,7 +68,6 @@ ul {
 .site-nav a {
     color:var(--title-text-color);
 
-    padding-right: 50px;
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
@@ -85,7 +81,6 @@ ul {
     line-height: normal;
     letter-spacing: 0.28px;
     text-decoration: none;
-    padding-left: 40px;
 }
 .site-nav a:hover,
 .site-nav a:focus {
@@ -101,25 +96,24 @@ ul {
 
 .site-nav{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-left: 0px;
+    gap: 50px;
+    margin: 0;
+    padding: 32px 0;
 }
 
 .site-contacts{
     display:flex;
-    align-items: center;
-    justify-items: space-between;
+    gap: 40px;
+    padding: 0;
+    margin: 0;
+    padding: 32px 0;
 }
 
 /* Герой */
 .hero {
-    display: flex;
     background-color: #2F303A;
-    height: 600px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    padding: 200px 0;
 }
 .hero-title {
     color: #FFFFFF;
@@ -131,8 +125,7 @@ ul {
     text-align: center;
     text-transform: uppercase;
     width: 696px;
-    margin-bottom: 30px;
-    
+    margin: 0 auto 30px;
 }
 /* button */
 .button {
@@ -150,11 +143,24 @@ ul {
     border-radius: 4px;
     
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    cursor: pointer;
 }
-
 /* Секція особливостей */
 
+.section{
+    padding: 94px;
+}
+.about{
+    padding-top: 0;
+}
+.visually-hidden{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+}
 .section-title {
     color: var(--title-text-color);
 
@@ -162,9 +168,8 @@ ul {
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
-    margin-bottom: 50px;
-    margin-top: 0px;
-    padding-top: 94px;
+    margin: 0 0 50px 0;
+    padding: 0;
 }
 .section-img{
     display: flex;
@@ -172,7 +177,7 @@ ul {
     align-items: center;
     justify-content: center;
     gap: 30px;
-    padding-bottom: 94px;
+    padding: 0;
     margin: 0;
 }
 /* Features */
@@ -182,8 +187,7 @@ ul {
     flex-direction: row;
     align-items: baseline;
     gap: 30px;
-    padding-top: 94px;
-    margin: 0px;
+    margin: 0;
 }
 
 .Features .title {
@@ -203,8 +207,9 @@ ul {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
+    padding: 0;
 }
-.section-command {
+.command {
     color: var(--primary-text-color); 
     background-color:var(--special-background-color);
 
@@ -217,8 +222,8 @@ ul {
     flex-direction: row;
     align-items: center;
     gap: 30px;
-    padding-bottom: 94px;
-    margin-bottom: 0;
+    padding: 0;
+    margin: 0;
 }
 
 .dev {
@@ -242,7 +247,7 @@ ul {
     flex-direction: column;
     align-content: space-around;
     justify-content: space-between;
-    padding-left: 40px;
+
 }
  .footer,
   .footer .logo {color: #ffffff ;
@@ -343,11 +348,9 @@ color: var(--primary-text-color)}
     font-size: 18px;
     line-height: 2.25;
     letter-spacing: 0.068em;
-    padding-left: 24px;
     margin: 0px;
 }
 .card p {
-    padding-left: 24px;
     padding-bottom: 20px;
     margin: 0px;
 }
