футер тепер нормальний
сподіваюсь

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -235,13 +235,10 @@ ul {
 }
     /*Футер */
 .footer{
-    width: 100%;
-    height: 251px;
+    padding: auto;
     background: #2F303A;
 }
-.footer .logo {
-    padding-top: 60px;
-}
+
 .footer-content{
     display: flex;
     flex-direction: column;
@@ -252,23 +249,26 @@ ul {
  .footer,
   .footer .logo {color: #ffffff ;
         background-color: #2F303A;
-    margin: 0 0 28px 0;}  
+} 
+.footer .logo {
+    margin: 0 0 28px 0;
+    padding: 60px 0 0;
+} 
   .footer p {
     color: #FFFFFF;
     background-color:#2F303A;
     font-size: 14px;
     font-style: normal;
-    margin-bottom: 12px;
  }
  .footer li {
-    margin-bottom: 12px;
+    margin: 12px 0 0 0;
  }
 .address-text {
     margin: 0;
 }
 .address-links {
     margin: 0px;
-    padding: 0px;
+    padding: 0 0 60px 0;
 }
  .address-links a {
 
@@ -279,7 +279,6 @@ ul {
     font-style: normal;
     line-height: 16px;    
     text-decoration: none;
-    margin: 12px 0;
  }
  .address-links a:hover,
  .address-links a:focus {
