--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,9 @@ ul {
     line-height: 1.71;
     letter-spacing: 0.03em;
 }
+img {
+    display: block;
+}
 .container{
     width: 1200px;
     margin: 0 auto;
@@ -68,10 +71,12 @@ ul {
 .site-nav a {
     color:var(--title-text-color);
 
+    display: block;
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
     text-decoration: none;
+    padding: 32px 0;
 }
 .site-contacts a {
     color: var(--primary-text-color);
@@ -98,15 +103,15 @@ ul {
     display: flex;
     gap: 50px;
     margin: 0;
-    padding: 32px 0;
+    padding: 0;
 }
 
 .site-contacts{
     display:flex;
+    align-items: center;
     gap: 40px;
     padding: 0;
     margin: 0;
-    padding: 32px 0;
 }
 
 /* Герой */
@@ -147,7 +152,7 @@ ul {
 /* Секція особливостей */
 
 .section{
-    padding: 94px;
+    padding: 94px 0;
 }
 .about{
     padding-top: 0;
@@ -173,7 +178,7 @@ ul {
 }
 .section-img{
     display: flex;
-    flex-direction: row;
+
     align-items: center;
     justify-content: center;
     gap: 30px;
@@ -184,15 +189,22 @@ ul {
 
 .Features {
     display: flex;
-    flex-direction: row;
+
     align-items: baseline;
     gap: 30px;
     margin: 0;
+    padding: 0;
 }
-
+.Features li {
+    width: 270px;
+}
+.Features p {
+    margin: 10px 0 0;
+}
 .Features .title {
     color: var(--title-text-color);
 
+    margin: 0;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -208,6 +220,7 @@ ul {
     font-size: 16px;
     line-height: 1.19;
     padding: 0;
+    margin: 0;
 }
 .command {
     color: var(--primary-text-color); 
@@ -219,7 +232,7 @@ ul {
 }
 .devs {
     display: flex;
-    flex-direction: row;
+
     align-items: center;
     gap: 30px;
     padding: 0;
@@ -233,9 +246,13 @@ ul {
     
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
 }
+.dev p {
+    margin: 10px 0 0;
+}
+
     /*Футер */
 .footer{
-    padding: auto;
+    padding: 0;
     background: #2F303A;
 }
 
@@ -244,6 +261,7 @@ ul {
     flex-direction: column;
     align-content: space-around;
     justify-content: space-between;
+    padding: 60px 0;
 
 }
  .footer,
@@ -252,9 +270,8 @@ ul {
 } 
 .footer .logo {
     margin: 0 0 28px 0;
-    padding: 60px 0 0;
 } 
-  .footer p {
+.footer p {
     color: #FFFFFF;
     background-color:#2F303A;
     font-size: 14px;
@@ -267,8 +284,8 @@ ul {
     margin: 0;
 }
 .address-links {
-    margin: 0px;
-    padding: 0 0 60px 0;
+    margin: 0;
+    padding: 0;
 }
  .address-links a {
 
@@ -315,7 +332,7 @@ color: var(--primary-text-color)}
 
 .site-nav-portfolio{
     display: flex;
-    flex-direction: row;
+
     justify-content: center;
     margin-top: 94px;
     margin-bottom: 50px;
