--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -339,8 +339,7 @@ color: var(--primary-text-color)}
     display: flex;
 
     justify-content: center;
-    margin-top: 94px;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 .portfolio {
     display: flex;
@@ -352,6 +351,8 @@ color: var(--primary-text-color)}
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.03em;
+    margin: 0;
+    padding-top: 0;
 }
 .card{
     flex: 1;
@@ -370,11 +371,9 @@ color: var(--primary-text-color)}
     font-size: 18px;
     line-height: 2.25;
     letter-spacing: 0.068em;
-    margin: 0px;
 }
 .card p {
     padding-bottom: 20px;
-    margin: 0px;
 }
 hr {
     border: none;
